# text-tournament

./: .gitignore  .nojekyll  LICENSE  analysis.html  index.html  pyproject.toml  readme.md
data/: audio.csv
example/: config.yml
text_tournament/: analysis.qmd  bradley_terry.py  tournament.py
