[tool.poetry]
name = "text-tournament"
version = "0.1.0"
description = ""
authors = ["Paul Simmering <paul.simmering@gmail.com>"]
readme = "README.md"
packages = [{include = "text_tournament"}]

[tool.poetry.dependencies]
python = "<4.0,>=3.10"
litellm = "^1.41.25"
instructor = "^1.3.5"
plotly = "^5.22.0"
tqdm = "^4.66.4"
polars = "^1.2.1"
numpy = "^2.0.0"
scipy = "^1.14.0"
click = "^8.1.7"
python-dotenv = "^1.0.1"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
nbformat = "^5.10.4"
nbclient = "^0.10.0"
pyyaml = "^6.0.1"
papermill = "^2.6.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tournament = "text_tournament.tournament:main"
